<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray_eee"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/view_line"
        android:src="@drawable/ic_bg_me"
        android:scaleType="fitXY"
        />

    <TextView
        android:id="@+id/tv_personal"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@mipmap/ic_me_head"/>

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_personal"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="#99f8f8f8"
        android:text="张三"
        />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_account"
        android:layout_marginTop="20dp"
        android:textColor="#99f8f8f8"
        android:textSize="12sp"
        android:text="湖南交通科学研究院（数智交通）"
        />

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_company"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tv_my_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_pressed"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:text="@string/my_info"
        android:textColor="@color/text_me_black"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_next_another"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_line"
        app:drawableStartCompat="@drawable/ic_me_personal" />


    <TextView
        android:id="@+id/tv_change_psd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/selector_pressed"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:text="@string/my_change_psd"
        android:textColor="@color/text_me_black"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_next_another"
        app:drawableStartCompat="@drawable/ic_me_psd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_my_info" />


    <TextView
        android:id="@+id/tv_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/selector_pressed"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:text="@string/my_about"
        android:textColor="@color/text_me_black"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_next_another"
        app:drawableStartCompat="@drawable/ic_me_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_change_psd" />

    <TextView
        android:id="@+id/tv_setting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/selector_pressed"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:text="@string/my_setting"
        android:textColor="@color/text_me_black"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_next_another"
        app:drawableStartCompat="@mipmap/ic_me_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_about" />


    <TextView
        android:id="@+id/tv_exit_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_pressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_setting"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:textSize="18sp"
        android:text="退出登录"
        android:textColor="@color/main_color"
        android:gravity="center"
        />


</androidx.constraintlayout.widget.ConstraintLayout>